# standards-schemas

./: 404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  contact.md  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
AnatomicalEntity/: index.html
Application/: index.html
BiomedicalStandard/: index.html
Boolean/: index.html
CategoryType/: index.html
Curie/: index.html
DataGeneratingProject/: index.html
DataPart/: index.html
DataSet/: index.html
DataSetContainer/: index.html
DataStandard/: index.html
DataStandardOrTool/: index.html
DataStandardOrToolContainer/: index.html
DataSubstrate/: index.html
DataSubstrateContainer/: index.html
DataTopic/: index.html
DataTopicContainer/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EDAM_ID/: index.html
EdamIdentifier/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
MESH_ID/: index.html
Manifest/: index.html
ManifestContainer/: index.html
MeSH_ID/: index.html
MeshIdentifier/: index.html
ModelRepository/: index.html
NCIT_ID/: index.html
NamedThing/: index.html
NcitIdentifier/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OntologyOrVocabulary/: index.html
Organization/: index.html
OrganizationContainer/: index.html
PersonStatus/: index.html
ROR_ID/: index.html
ReferenceDataOrDataset/: index.html
ReferenceImplementation/: index.html
(+556 files in other folders)
