[tool.poetry]
name = "standards_schemas"
version = "0.0.0.post68.dev0+451e3f6"
description = "Data schemas for Bridge2AI Standards."
authors = ["J. Harry Caufield <jhc@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/standards_schemas/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
cruft = "^2.12.0"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]